Generacion de tareas con un estado específico (incorporado en el formulario de creacion masiva de tareas)